Parse URL and check protocol